--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ platformdirs==4.3.6
 pluggy==1.5.0
 protobuf==5.29.3
 psutil==6.1.1
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyarrow==19.0.0
 pycparser==2.22
