--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=project_db_4fx1_user
 POSTGRES_PASSWORD=AvjTC4rLKtEW7g0FbF3RF4sRbgY2JURe
-DATABASE_URL=postgresql://project_db_4fx1_user:AvjTC4rLKtEW7g0FbF3RF4sRbgY2JURe@dpg-cudrhs2n91rc73d5lc50-a.oregon-postgres.render.com/project_db_4fx1
+DATABASE_URL=dpg-cudrhs2n91rc73d5lc50-a.oregon-postgres.render.com
 POSTGRES_PORT=5432
 POSTGRES_DB=project_db_4fx1
